removed background added sidebar div (styling in comments) fixed bug with scrollbar

--- a/mindquarry-webapp/trunk/mindquarry-webapp-resources/src/main/resources/COB-INF/css/screen.css
+++ b/mindquarry-webapp/trunk/mindquarry-webapp-resources/src/main/resources/COB-INF/css/screen.css
@@ -15,13 +15,17 @@ html, body {
 }
 
 body {
-	margin: 0px;
-	padding-top: 70px;
 	background-color:#efefef;	
 }
+
+div.body {
+    padding-top: 70px; /* sync this with #webapp-header in navigation.css */
+}
+
 * html>body, html>body #webapp-content {
 	height: auto;
 }
+
 #webapp-content {
 	width: 100%;
 }
@@ -49,107 +53,27 @@ h1, h2, h3, h4, h5, h6 {
   font-family:Helvetica,Arial,sans-serif;
 }
 
-/**************************************************/
+/*
+TODO: fill side bar with life
 
-#background-repeater {
-	left:0px;
-	background-color:#fff;
-	background-repeat:repeat-y;
+#sidebar {
+    width: 220px;
+    height: 400px;
+    border: 1px solid black;
+    position: absolute;
+    margin:0px;
+    margin-left:10px
 }
 
-
-#background-lines {
-	background-repeat:no-repeat;
+#innercontent {
+    margin-left:220px; 
 }
 
-
-#background-s {
-	background-repeat:repeat-x;
-	background-position:bottom;
-}
-
-#background-n {
-	background-repeat:repeat-x;
-}
-
-#background-w {
-	background-repeat:repeat-y;
-}
-
-#background-e {
-	background-repeat:repeat-y;
-	background-position:right;
-}
-
-#background-nw {
-	background-repeat:no-repeat;
-}
-
-#background-ne {
-	background-repeat:no-repeat;
-	background-position:right top;
-}
-
-#background-sw {
-	background-repeat:no-repeat;
-	background-position:left bottom;
-}
-
-#background-se {
-	background-repeat:no-repeat;
-	background-position:bottom right;
-}
-
-#background-nw {
-	background-repeat:no-repeat;
-}
+*/
 
 #innercontent {
 	padding:30px;
 }
-
-
-/* BORDERS */
-
-#background-s {
-	background-image:url(../images/border-s.gif);
-}
-
-#background-n {
-	background-image:url(../images/border-n.gif);
-}
-
-#background-w {
-	background-image:url(../images/border-w.gif);
-}
-
-#background-e {
-	background-image:url(../images/border-e.gif);
-}
-
-#background-nw {
-	background-image:url(../images/border-nw.gif);
-}
-
-#background-ne {
-	background-image:url(../images/border-ne.gif);
-}
-
-#background-sw {
-	background-image:url(../images/border-sw.gif);
-}
-
-#background-se {
-	background-image:url(../images/border-se.gif);
-}
-
-#background-nw {
-	background-image:url(../images/border-nw.gif);
-}
-
-
-
-
 
 
 /*
